# LQR-BCR

./: .gitignore  README.md  setup.py  test_thomas.py
BCR/: __init__.py  solver.py  systems.py
KKT/: __init__.py  condensed_hessian.py  ddp_newton.py  full_system.py
LQR/: __init__.py  solvers.py
cuda_bcr/: CMakeLists.txt  build.sh  pyproject.toml  setup.py
cuda_bcr/examples/: demo.py
cuda_bcr/include/: bcr_solver.cuh  block_operations.cuh  riccati_kernels.cuh  types.h
cuda_bcr/python/: __init__.py  cuda_bcr.py  utils.py
cuda_bcr/python/cuda_bcr/: __init__.py  solver.py
cuda_bcr/python/cuda_bcr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cuda_bcr/src/: bcr_solver.cu  block_operations.cu  python_bindings.cpp  riccati_kernels.cu
cuda_bcr/tests/: benchmark_vs_cpu.py  test_cuda_bcr.py
examples/: basic_lqr.py
tests/: __init__.py  test_bcr.py  test_integration.py  test_kkt.py  test_riccati.py
