[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda_bcr"
version = "0.1.0"
description = "CUDA-accelerated Block Cyclic Reduction for LQR"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Xiaoming Zhao", email = "xiaoming.zhao.gr@dartmouth.edu"}
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "matplotlib>=3.0",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
cuda_bcr = ["*.so"]